--- a/hw2_morgan.html
+++ b/hw2_morgan.html
@@ -1715,7 +1715,9 @@ using the empirical cumulative distribution function (ECDF).</p></li>
 </div>
 <div id="normal-distribution" class="section level1">
 <h1>Normal Distribution</h1>
-  <img src="hw2_nd.png" alt="Homework Screenshot" width="300">
+  <img src="hw2_nd.png"
+     alt="Homework Screenshot"
+     style="max-width:350px; display:block; margin:auto;">
 <p><span class="math display">\[
 X \to N\left(\mu,  \frac{\sigma}{\sqrt{n}}\right)
 \]</span></p>
