Center image and adjust width in normal distribution section

--- a/hw2_morgan.html
+++ b/hw2_morgan.html
@@ -1715,9 +1715,9 @@ using the empirical cumulative distribution function (ECDF).</p></li>
 </div>
 <div id="normal-distribution" class="section level1">
 <h1>Normal Distribution</h1>
-  <img src="hw2_nd.png"
-     alt="Homework Screenshot"
-     style="max-width:350px; display:block; margin:auto;">
+<center>
+  <img src="hw2_nd.png" width="300">
+</center>
 <p><span class="math display">\[
 X \to N\left(\mu,  \frac{\sigma}{\sqrt{n}}\right)
 \]</span></p>
