Add link to Homework 3 in index.html

--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
       <a href="hw2_morgan.html">Homework 2</a>
     </p>
 
+    <p>
+      <a href="hw3_morgan.html">Homework 3</a>
+    </p>
+
   </body>
 </html>
