--- a/index.html
+++ b/index.html
@@ -16,5 +16,9 @@
       <a href="hw3_morgan.html">Homework 3</a>
     </p>
 
+    <p>
+      <a href="hw4_morgan.html">Homework 4</a>
+    </p>
+
   </body>
 </html>
